@@ -9,8 +9,42 @@
 #include "ptypes.h"
 #include "isaac.h"
 
+/* Ensure big-endian and little-endian get the same results */
+#if __LITTLE_ENDIAN__ || (defined(BYTEORDER) && (BYTEORDER == 0x1234 || BYTEORDER == 0x12345678))
+#define SWAPRSL(rsl, num)  { }
+#define COPYRSL(data, rsl, start, bytes) \
+    memcpy(data, (unsigned char*) (rsl+start), bytes);
+#else
+#if !defined(__x86_64__)
+#undef U8TO32_LE
+#undef U32TO8_LE
+#endif
+#ifndef U32TO8_LE
+#define U32TO8_LE(p, v) \
+  do { uint32_t _v = v; \
+       (p)[0] = (((_v)      ) & 0xFFU); \
+       (p)[1] = (((_v) >>  8) & 0xFFU); \
+       (p)[2] = (((_v) >> 16) & 0xFFU); \
+       (p)[3] = (((_v) >> 24) & 0xFFU); } while (0)
+#endif
+#define SWAPRSL(rsl, num) \
+  { unsigned char* rsc = (unsigned char*) rsl; \
+    uint32_t i; \
+    for (i = 0; i < num; i++) \
+      U32TO8_LE(rsc+4*i, rsl[i]); \
+   }
+#define COPYRSL(data, rsl, start, bytes) \
+  { \
+    unsigned char swapbuf[256*4]; \
+    uint32_t i; \
+    for (i = 0; i < (bytes+3)/4; i++) \
+      { U32TO8_LE(swapbuf+4*i, rsl[start+i]); } \
+    memcpy(data, swapbuf, bytes); \
+  }
+#endif
+
 static uint32_t randrsl[256];
-static uint32_t randcnt = 300;
+static uint32_t randcnt;
 static int good_seed = 0;
 
 /* internal state */
@@ -37,6 +71,7 @@ static void isaac(void)
      mm[i]      = y  = mm[(x>>2)%256] + aa + bb;
      randrsl[i] = bb = mm[(y>>10)%256] + x;
    }
+   randcnt = 0;
 }
 #define mix(a,b,c,d,e,f,g,h) \
 { \
@@ -99,6 +134,7 @@ void isaac_init(uint32_t bytes, const unsigned char* data)
       rdata += n_copy_bytes;
       n_fill_bytes -= n_copy_bytes;
     }
+    SWAPRSL(randrsl, 256);
   }
   randinit();
   good_seed = (bytes >= 16);
@@ -106,55 +142,44 @@ void isaac_init(uint32_t bytes, const unsigned char* data)
 
 int isaac_seeded(void) { return good_seed; }
 
+void isaac_rand_bytes(uint32_t bytes, unsigned char* data)
+{
+  if ( 4*(256-randcnt) >= bytes) {
+    /* We have enough data, just copy it and leave */
+    COPYRSL(data, randrsl, randcnt, bytes);
+    randcnt += (bytes+3)/4;
+  } else {
+    /* Loop copying up to 1024 bytes at a time */
+    uint32_t n_rand_bytes, n_copy_bytes;
+    while (bytes > 0) {
+      if (randcnt > 255)
+        isaac();
+      n_rand_bytes = 4 * (256-randcnt);
+      n_copy_bytes = (n_rand_bytes > bytes) ? bytes : n_rand_bytes;
+      COPYRSL(data, randrsl, randcnt, n_copy_bytes);
+      data += n_copy_bytes;
+      randcnt += (n_copy_bytes+3)/4;
+      bytes -= n_copy_bytes;
+    }
+  }
+}
+
 uint32_t isaac_rand32(void)
 {
-  if (randcnt > 255) {
-    if (randcnt == 300) croak("ISAAC used without initialization");
-    isaac();
-    randcnt = 0;
-  }
+  if (randcnt > 255) isaac();
   return randrsl[randcnt++];
 }
 
 /* Return rand 32-bit integer between 0 to n-1 inclusive */
 uint32_t isaac_rand(uint32_t n)
 {
-  uint32_t r, rmax;
+  uint32_t r, rmin;
   if (n <= 1) return 0;
-  if ((n & (n-1)) == 0) return (isaac_rand32() % n);
-  rmax = (4294967295U / n) * n;
-  do {
+  rmin = -n % n;
+  while (1) {
     r = isaac_rand32();
-  } while (r >= rmax);
+    if (r >= rmin)
+      break;
+  }
   return r % n;
-}
-
-void isaac_rand_bytes(uint32_t bytes, unsigned char* data)
-{
-#if 0
-  /* Byte at a time using our rand32 function */
-  uint32_t i, d, p;
-  for (i = 0; i < bytes; i++) {
-    p = i % 4;
-    if (p == 0)
-      d = isaac_rand32();
-    *data++ = (d >> (p*8)) & 0xFF;
-  }
-#else
-  /* Use memcpy to copy up to 1024 bytes at a time */
-  uint32_t n_rand_bytes, n_copy_bytes;
-  while (bytes > 0) {
-    if (randcnt > 255) {
-      if (randcnt == 300) croak("ISAAC used without initialization");
-      isaac();
-      randcnt = 0;
-    }
-    n_rand_bytes = 4 * (256-randcnt);
-    n_copy_bytes = (n_rand_bytes > bytes) ? bytes : n_rand_bytes;
-    memcpy(data, (unsigned char*) (randrsl+randcnt), n_copy_bytes);
-    data += n_copy_bytes;
-    randcnt += (n_copy_bytes+3)/4;
-    bytes -= n_copy_bytes;
-  }
-#endif
 }
